# image

./: .gitignore  Cargo.toml  README.md  build.sh  conversion-test  conversion-test.rs  dev.sh  package-lock.json  package.json  real-conversion-test.rs  simple-test  simple-test.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ConversionPage.tsx
frontend/src/hooks/: useWasmLoader.ts
frontend/src/services/: conversionService.ts
frontend/src/utils/: wasm-module.d.ts  wasm.d.ts
rustimage-core/: Cargo.toml
rustimage-core/src/: codecs.rs  converter.rs  error.rs  filters.rs  lib.rs  performance.rs  processor.rs  types.rs
rustimage-core/tests/: basic_conversion.rs
rustimage-wasm/: Cargo.toml
rustimage-wasm/src/: bindings.rs  conversion.rs  lib.rs  performance.rs  types.rs  utils.rs
src/: lib.rs
src/components/: index.ts
src/components/FormatConverter/: index.tsx
src/components/FormatSelector/: index.tsx
src/components/ImageProcessor/: FilterControls.tsx  ImagePreview.tsx  ProcessingProgress.tsx  index.tsx
src/components/PerformanceMonitor/: index.tsx
src/hooks/: index.ts  useFileUpload.ts  useFormatConverter.ts  useImageProcessor.ts  usePerformanceMonitor.ts  useWasm.ts
src/stores/: imageStore.ts  index.ts
src/types/: index.ts
test-core/: Cargo.toml
test-core/src/: main.rs
