[workspace]
resolver = "2"
members = [
    "rustimage-core",
    "rustimage-wasm"
]

[workspace.dependencies]
image = "0.24"
wasm-bindgen = "0.2"
rayon = "1.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[package]
name = "rustimage-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]