[package]
name = "rustimage-core"
version = "0.1.0"
edition = "2021"
description = "Core image processing library with deep module design"

[dependencies]
image = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }

[lib]
name = "rustimage_core"
crate-type = ["cdylib", "rlib"]



[features]
default = ["parallel"]
bench = []
simd = []
parallel = ["rayon"]