[package]
name = "rustimage-core"
version = "0.1.0"
edition = "2021"
description = "Core image processing library with deep module design"

[dependencies]
image = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { version = "1.6", features = ["v4", "js"] }
wasm-bindgen = { workspace = true, optional = true }
web-time = "0.2"

[lib]
name = "rustimage_core"
crate-type = ["cdylib", "rlib"]



[features]
default = ["parallel"]
bench = []
simd = []
parallel = ["rayon"]
wasm = ["dep:wasm-bindgen"]