[package]
name = "rustimage-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for rustimage-core"

[dependencies]
rustimage-core = { path = "../rustimage-core" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "ImageData",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Performance",
    "PerformanceEntry",
    "PerformanceMeasure",
    "PerformanceObserver",
] }
wee_alloc = { version = "0.4", optional = true }
console_error_panic_hook = "0.1"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]